5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1807_2573.log
== TEST (2019-06-08 14:59:49) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))

for x in massa:
	for y in altura:
		imc = x / y**2
		
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:01:41) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))

for x,y in massa,altura:
	imc = x / y**2
		
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:11:35) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = ones(size(massa))

while size(massa) > 1 or size(altura) > 1:
	for x in massa:
		for y in altura:
			imc = x / y**2
			imc = round(imc,2)
			v[i] = imc
		

print("O MAIOR IMC DA TURMA EH: ", max(imc))

for v in max(imc):
	if v < 17:
		print("MUITO ABAIXO DO PESO")
	elif 17 <= v < 18.5:
		print("ABAIXO DO PESO")
	elif 18.5 <= v < 25:
		print("PESO NORMAL")
	elif 25 <= v < 30:
		print("ACIMA DO PESO")
	elif 30 <= v < 35:
		print("OBESIDADE")
	elif 35 <= v < 40:
		print("OBESIDADE SEVERA")
	elif v > 40:
		print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:11:47) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = ones(size(massa))

while size(massa) > 1 or size(altura) > 1:
	for x in massa:
		for y in altura:
			imc = x / y**2
			imc = round(imc,2)
			v[i] = imc
		

print("O MAIOR IMC DA TURMA EH: ", max(v))

for v in max(v):
	if v < 17:
		print("MUITO ABAIXO DO PESO")
	elif 17 <= v < 18.5:
		print("ABAIXO DO PESO")
	elif 18.5 <= v < 25:
		print("PESO NORMAL")
	elif 25 <= v < 30:
		print("ACIMA DO PESO")
	elif 30 <= v < 35:
		print("OBESIDADE")
	elif 35 <= v < 40:
		print("OBESIDADE SEVERA")
	elif v > 40:
		print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:12:02) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = ones(size(massa))
i = 0

while size(massa) > 1 or size(altura) > 1:
	for x in massa:
		for y in altura:
			imc = x / y**2
			imc = round(imc,2)
			v[i] = imc
		

print("O MAIOR IMC DA TURMA EH: ", max(v))

for v in max(v):
	if v < 17:
		print("MUITO ABAIXO DO PESO")
	elif 17 <= v < 18.5:
		print("ABAIXO DO PESO")
	elif 18.5 <= v < 25:
		print("PESO NORMAL")
	elif 25 <= v < 30:
		print("ACIMA DO PESO")
	elif 30 <= v < 35:
		print("OBESIDADE")
	elif 35 <= v < 40:
		print("OBESIDADE SEVERA")
	elif v > 40:
		print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:12:42) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = ones(size(massa))
i = 0

while size(massa) > 1 or size(altura) > 1:
	for x in massa:
		for y in altura:
			imc = x / y**2
			imc = round(imc,2)
			v[i] = imc

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

for v in max(v):
	if v < 17:
		print("MUITO ABAIXO DO PESO")
	elif 17 <= v < 18.5:
		print("ABAIXO DO PESO")
	elif 18.5 <= v < 25:
		print("PESO NORMAL")
	elif 25 <= v < 30:
		print("ACIMA DO PESO")
	elif 30 <= v < 35:
		print("OBESIDADE")
	elif 35 <= v < 40:
		print("OBESIDADE SEVERA")
	elif v > 40:
		print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:15:05) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = ones(size(massa))
i = 0

while size(massa) > 1 or size(altura) > 1:
	for x in massa:
		for y in altura:
			imc = x / y**2
			imc = round(imc,2)
			v[i] = imc

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:15:37) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = ones(size(massa))
i = 0

while size(massa) > 1 or size(altura) > 1:
	for x in massa:
		for y in altura:
			imc = x / y**2
			imc = round(imc,2)
			v[i] *= imc

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:16:17) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = ones(size(massa))
i = 0

for x in massa:
	for y in altura:
		imc = x / y**2
		imc = round(imc,2)
		v[i] = imc

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:17:01) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0

for x in massa:
	for y in altura:
		imc = x / y**2
		imc = round(imc,2)
		v[i] += imc

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:17:23) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0

for x in massa:
	for y in altura:
		imc = x / y**2
		imc = round(imc,2)
		v[i] = imc

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:18:47) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa), dtype = int)
i = 0

for x in massa:
	for y in altura:
		imc = x / y**2
		imc = round(imc,2)
		v[i] = imc

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:20:58) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0

while i < size(massa):
	
	imc = x[i] / y[i**2
	imc = round(imc,2)
	v[i] = imc

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
File "XXXX", line 11
    imc = round(imc,2)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:21:12) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0
imc = 0

while i < size(massa):
	
	imc = x[i] / y[i**2
	imc = round(imc,2)
	v[i] = imc

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
File "XXXX", line 12
    imc = round(imc,2)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:21:53) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0
imc = 0

while i < size(massa):
	imc = x[i] / y[i]**2
	imc = round(imc,2)
	v[i] = imc

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:23:06) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0
imc = 0
x,y = massa,altura


while i < size(massa):
	imc = x[i] / y[i]**2
	imc = round(imc,2)
	v[i] = imc

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:23:40) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0
imc = 0

while i < size(massa):
	imc = x[massa] / y[altura]**2
	imc = round(imc,2)
	v[i] = imc

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:24:17) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0
imc = 0

while i < size(massa):
	imc[i] = massa[i] / altura[i]**2
	imc[i] = round(imc[i],2)
	v[i] = imc[i]

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:25:00) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0
imc = 0

while i < size(massa):
	imc = massa[i] / altura[i]**2
	imc = round(imc[i],2)
	v = imc[i]

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:25:13) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0
imc = 0

while i < size(massa):
	imc = massa[i] / altura[i]**2
	imc = round(imc[i],2)
	v = imc[i]
	
	i += 1
	
print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:26:03) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0

for x in massa and for y in altura:
	imc = x / y**2
	imc = round(imc,2)
	v[i] = imc

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
File "XXXX", line 8
    for x in massa and for y in altura:
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:28:03) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0

for x in massa:
	for y in massa:
		
		imc = x / y**2
		imc = round(imc,2)
		v[i] = imc

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:02:45) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0

while i != size(massa):
	
	imc = massa / altura**2
	imc = round(imc,2)
	v[i] = imc
	
	i += 1

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:03:28) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0

while i != size(massa):
	
	imc = massa / altura**2
	v[i] = imc
	
	i += 1

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:04:33) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0

while i != size(massa):
	
	imc = massa[i] / altura[i] **2
	v[i] = imc
	
	i += 1

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 21:04:57) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0

while i != size(massa):
	
	imc = massa[i] / altura[i] **2
	v[i] = round(imc,2)
	
	i += 1

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- EXECUTION TIME:
0.951491
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH:  24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH:  17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH:  37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 21:05:23) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0

for i in massa:
	
	imc = massa[i] / altura[i] **2
	v[i] = round(imc,2)
	
print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- EXECUTION TIME:
1.24367
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2573/main.py", line 10, in <module>
    imc = massa[i] / altura[i] **2
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 21:05:29) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))


for i in massa:
	
	imc = massa[i] / altura[i] **2
	v[i] = round(imc,2)
	
print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- EXECUTION TIME:
1.09026
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2573/main.py", line 10, in <module>
    imc = massa[i] / altura[i] **2
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 21:05:43) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0

while i != size(massa):
	
	imc = massa[i] / altura[i] **2
	v[i] = round(imc,2)
	
	i += 1

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- EXECUTION TIME:
1.1341
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
massa dos alunos: altura dos alunos: [24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH:  24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
massa dos alunos: altura dos alunos: [ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH:  17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
massa dos alunos: altura dos alunos: [37.79 31.88]
O MAIOR IMC DA TURMA EH:  37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 21:05:52) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0

while i != size(massa):
	
	imc = massa[i] / altura[i] **2
	v[i] = round(imc,2)
	
	i += 1

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- EXECUTION TIME:
1.26571
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH:  24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
massa dos alunos: altura dos alunos: [ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH:  17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
massa dos alunos: altura dos alunos: [37.79 31.88]
O MAIOR IMC DA TURMA EH:  37.79
OBESIDADE SEVERA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 21:05:56) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0

while i != size(massa):
	
	imc = massa[i] / altura[i] **2
	v[i] = round(imc,2)
	
	i += 1

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- EXECUTION TIME:
1.08665
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH:  24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH:  17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH:  37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 00:16:46) 
-- CODE:
from numpy import *

massa = array(eval(input("massa dos alunos: ")))
altura = array(eval(input("altura dos alunos: ")))
v = zeros(size(massa))
i = 0

for i in range(size(massa)):
	
	imc = massa[i] / altura[i] **2
	v[i] = round(imc,2)
	

print(v)
print("O MAIOR IMC DA TURMA EH: ", max(v))

if max(v) < 17:
	print("MUITO ABAIXO DO PESO")
elif 17 <= max(v) < 18.5:
	print("ABAIXO DO PESO")
elif 18.5 <= max(v) < 25:
	print("PESO NORMAL")
elif 25 <= max(v) < 30:
	print("ACIMA DO PESO")
elif 30 <= max(v) < 35:
	print("OBESIDADE")
elif 35 <= max(v) < 40:
	print("OBESIDADE SEVERA")
elif max(v) > 40:
	print("OBESIDADE MORBIDA")
-- EXECUTION TIME:
1.14177
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH:  24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH:  17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH:  37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
